WP-8474 related program section border and spacing issue fixes

--- a/css/conditionals/voices-detail.css
+++ b/css/conditionals/voices-detail.css
@@ -787,7 +787,24 @@
   color: #636f00;
   font-size: 16px;
 }
-.node-type-voices .ds-2col-stacked-fluid .content-wrapper .group-right .field-name-field-link-unlimited:last-child {
-  border-bottom: none !important;
+.node-type-voices .ds-2col-stacked-fluid .content-wrapper .group-right fieldset.group-wrapper-related .field-label {
+  padding-left: 20px;
+}
+.node-type-voices .ds-2col-stacked-fluid .content-wrapper .group-right fieldset.group-wrapper-related .field-related-programs {
+  padding-left: 20px;
+}
+.node-type-voices .ds-2col-stacked-fluid .content-wrapper .group-right fieldset.group-wrapper-related .field-related-programs-wrapper {
+  border-bottom: 1px solid lightgray;
+  padding-bottom: 10px;
+}
+.node-type-voices .ds-2col-stacked-fluid .content-wrapper .group-right fieldset.group-wrapper-related .field-name-field-link-unlimited {
+  padding-top: 15px;
   padding-bottom: 15px;
+}
+.node-type-voices .ds-2col-stacked-fluid .content-wrapper .group-right fieldset.group-wrapper-related .field-name-field-link-unlimited div {
+  margin-bottom: 0px;
+}
+.node-type-voices .ds-2col-stacked-fluid .content-wrapper .group-right fieldset.group-wrapper-related .field-name-field-link-unlimited:last-child {
+  border-bottom: none !important;
+  padding-bottom: 10px !important;
 }
